# aoc-2021

./: .ccls  .clang-format  .gitignore  README.md  flake.nix  meson.build
.github/workflows/: ci.yml
include/: day01.h  day02.h  day03.h  day04.h  day05.h  day06.h  day07.h  day08.h  day09.h  day10.h  day11.h  day12.h  day13.h  day14.h  day15.h  day16.h  day17.h  day18.h  day19.h  day20.h  day21.h  day22.h  day23.h  day24.h  day25.h
puzzle/: day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md  day11.md  day12.md  day13.md  day14.md  day15.md  day16.md  day17.md  day18.md  day19.md  day20.md  day21.md  day22.md  day23.md  day24.md  day25.md
scripts/: alu2cpp.py
share/cpp/: aoc.cpp  aoc.h  bits.h  graph.h  hash.h  log.h  numeric.h  pair.h  parse.cpp  parse.h
share/cpp/recipes/: backtrack.cpp
share/scripts/: gen_header.sh
src/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  main.cpp
